# aidl-upc-winter2024-satellite-imagery

./: .gitignore  Dockerfile  GeoTiff_DataLoader.ipynb  README.md  pyproject.toml  requirements.txt
app/wildfire_bin_classifier/src/: eval_model.py  main.py  train_model.py
app/wildfire_bin_classifier_restnet50/src/: main.py  test_model.py  train_model.py  utils.py  val_model.py
app/with_curated_dataset/: README.md
checkpoints/: experiments.md  experiments.xlsx
checkpoints/high_res_dataset_model/: Readme.md  events.out.tfevents.1709132740.ip-10-0-124-57.eu-central-1.compute.internal.69.1
data/: README.md  data_points.json
data/LP_DAAC_MOD14A1/data_loader/: loader.py
notebooks/: README.md  segementation_model_data.ipynb  segmentation_model_data.ipynb
notebooks/Nacho/: end_to_end_model_creation_cloud_env.ipynb  model_prediction.ipynb  satellite_images_dataset_segmentation_notebook.ipynb  train_no.py  training.py  training_v0
notebooks/Paula/: README.md  finalreadme  project_training_and_test_1.ipynb  project_training_and_test_2.ipynb
notebooks/jose/: MODIS_ee.ipynb  MODIS_fire_data.ipynb  README.md  data_processing.ipynb  dataset_split.ipynb
notebooks/julian/: Exploratory_work_on_Planetary_Computer_Microsoft_datasets.ipynb
notebooks/julian/2_data_analysis/: Exploratory work on Planetary Computer - Microsoft datasets.ipynb  latest_data_processing.ipynb  notebook_copy_of_data_processing.ipynb
notebooks/julian/3_model_with_curated_dataset/: binary_wildfire_prediction_w_cnn.ipynb  wildfire_bin_classifier_restnet50.ipynb
src/data_loader/: loader.py
(+34 files in other folders)
